i made it again
hahahaa

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     </head>
     <body>
         <div id="exam_div"></div>
-        <script src="./main/js/load_exam.js">load_exam();</script>
+        <script src="./main/js/load_exam.js"></script>
+        <input type="button" onclick="check();" value="제출"/>
+        <div id="result"></div>
     </body>
 </html>
